// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Alert prop type is marked as required 1`] = `
<div
  className="alert alert-undefined"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  

</div>
`;

exports[`Component: Alert renders an alert with a close-button 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  

  <a
    data-alert-close=""
    href="#"
    onClick={[Function]}
  >
    
		
    <i
      aria-label="Close"
      className="material-icons"
    >
      close
    </i>
    
	
  </a>
  

</div>
`;

exports[`Component: Alert renders an alert with icon 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  >
    test
  </i>
  

</div>
`;

exports[`Component: Alert renders an alert with text 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  <p>
    test
  </p>
  

</div>
`;

exports[`Component: Alert renders an alert with the correct type recieved from its props 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  

</div>
`;

exports[`Component: Alert renders an alert without a close-button if no close prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  

</div>
`;

exports[`Component: Alert renders an alert without an icon if no icon prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  

</div>
`;

exports[`Component: Alert renders an alert without text if no text prop is provided 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  

</div>
`;

exports[`Component: Alert the close-button prevents default 1`] = `
<div
  className="alert alert-test"
>
  

  <i
    aria-hidden="true"
    className="material-icons alert-icon mr-3"
  />
  

  <a
    data-alert-close=""
    href="#"
    onClick={[Function]}
  >
    
		
    <i
      aria-label="Close"
      className="material-icons"
    >
      close
    </i>
    
	
  </a>
  

</div>
`;
